# lovelyai

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  settings.yml  settings.yml.example
app/: launcher.py
app/bot/: filters.py  states.py
app/bot/handlers/: __init__.py  constants.py  kb.py  registration.py  utils.py
app/bot/handlers/callback/: __init__.py  callback.py  utils.py
app/bot/handlers/command/: __init__.py  command.py  utils.py
app/bot/handlers/message/: __init__.py  message.py  utils.py
app/bot/handlers/registration/: __init__.py  queue_profile.py  registration.py  utils.py
app/core/: __init__.py  config.py  constants.py  lexicon.py  logger.py  settings.py  utils.py
app/core/middlewares/: __init__.py  album.py  db.py  exception_log.py  user.py
app/database/: __init__.py  engine.py  enums.py  models.py  utils.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 2579ae7c81a7_model_airequestlog.py  44ec4e208d44_user_role.py  569c36572c5d_fix_user_filter_age.py  5c863c7d5472_username_to_user.py  ab3f58f3be1b_role_nullable_false.py  ab89c55ce27b_biginteger_для_айди_телеги.py  dc96e44151ee_update_at_to_match_action.py  fe89347664a6_init.py
app/services/: __init__.py
app/services/ai_service/: ai_service.py  utils.py
app/services/ai_service/prompts/: __init__.py  system_prompts.py  (+1 more)
app/services/gar_service/: __init__.py  gar_client.py
app/services/match_service/: __init__.py  match_service.py  utils.py
service/core/: __init__.py  config.py  core.py
service/handlers/: __init__.py  command.py
