[project]
name = "luvai-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "'qbr0q'",email = "qbroq@vk.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "openai (>=2.21.0,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
