[project]
name = "luvlyai-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "'qbr0q'",email = "qbroq@vk.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "openai (>=2.21.0,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic-settings-yaml (>=0.2.0,<0.3.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aiohttp-socks (>=0.11.0,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
